add game component

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,6 +2,26 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Jua', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+$font-large:4rem;
+$font-medium:2.5rem;
+$font-small:1.25rem;
+
+
+//Color
+$yellow:#F9D448;
+$blue-grey:#BDB5D5;
+$light-red: #DF7C69;
+$red:#932F3C;
+$white:#FFFFFF;
+$pale-cream:#FFF6E2;
+
+
+
+
+
+
+
