--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,15 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jua&display=swap');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import 'bootstrap/scss/bootstrap';
+//layouts
+@import 'layouts.scss';
+//buttons
+@import 'buttons.scss';
+
+
+
+
+
