--- a/resources/sass/layouts.scss
+++ b/resources/sass/layouts.scss
@@ -5,6 +5,7 @@ body{
     height: 100vh;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 h1,h2,h3,h4,h5,h6,p,a{
@@ -15,6 +16,8 @@ h1,h2,h3,h4,h5,h6,p,a{
 html {
     padding: 0;
     margin: 0;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .logo-text{
@@ -23,6 +26,12 @@ html {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: $light-red;
     line-height: 70px;
+}
+.game-container {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background: $pale-cream;
 }
 
 
