--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,7 +13,7 @@ $font-small:1.25rem;
 
 //Color
 $yellow:#F9D448;
-$blue-grey:#BDB5D5;
+$blue-grey:#c7c7c7;
 $light-red: #DF7C69;
 $red:#932F3C;
 $white:#FFFFFF;
