--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,7 +14,7 @@ $font-small:1.25rem;
 //Color
 $yellow:#F9D448;
 $blue-grey:#c7c7c7;
-$light-red: #DF7C69;
+$light-red: #4F709C;
 $red:#932F3C;
 $white:#FFFFFF;
 $pale-cream:#FFF6E2;
