--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,7 +17,9 @@ $blue-grey:#c7c7c7;
 $light-red: #4F709C;
 $red:#932F3C;
 $white:#FFFFFF;
-$pale-cream:#FFF6E2;
+$pale-cream:#F2F5FF;
+$pale-text: #4F709C;
+$pale-background:#E9E5FF;
 
 
 
