redesign and fix timer

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,7 +13,7 @@ $font-small:1.25rem;
 
 //Color
 $yellow:#F9D448;
-$blue-grey:#c7c7c7;
+$blue-grey:#856bca;
 $light-red: #4F709C;
 $red:#932F3C;
 $white:#FFFFFF;
