--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -15,7 +15,7 @@ $font-small:1.25rem;
 $yellow:#F9D448;
 $blue-grey:#856bca;
 $light-red: #4F709C;
-$red:#932F3C;
+$red:#e44659;
 $white:#FFFFFF;
 $pale-cream:#F2F5FF;
 $pale-text: #4F709C;
